[package]
name = "fcm"
version = "0.7.0-alpha.2"
authors = [
  "Suvish Varghese Thoovamalayil <vishy1618@gmail.com>",
  "panicbit <panicbit.dev@gmail.com>",
  "Julius de Bruijn <pimeys@gmail.com>"]
description = "An API to talk to FCM (Firebase Cloud Messaging) in Rust"
license = "MIT"
homepage = "https://github.com/panicbit/fcm-rust"
repository = "https://github.com/panicbit/fcm-rust"
documentation = "https://docs.rs/fcm/"
keywords = ["fcm", "firebase", "notification"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
erased-serde = "0.3"
serde_derive = "1.0"
futures-preview = "0.3.0-alpha.18"
hyper = "0.13.0-alpha.1"
hyper-tls = "0.4.0-alpha.1"
http = "0.1"
chrono = "0.4"
log = "0.4"

[dev-dependencies]
argparse = "0.2.1"
tokio = "0.2.0-alpha.4"
pretty_env_logger = "0.3"
