[package]
name = "fcm"
version = "0.9.0"
authors = [
  "Suvish Varghese Thoovamalayil <vishy1618@gmail.com>",
  "panicbit <panicbit.dev@gmail.com>",
  "Julius de Bruijn <pimeys@gmail.com>"]
description = "An API to talk to FCM (Firebase Cloud Messaging) in Rust"
license = "MIT"
homepage = "https://github.com/panicbit/fcm-rust"
repository = "https://github.com/panicbit/fcm-rust"
documentation = "https://docs.rs/fcm/"
keywords = ["fcm", "firebase", "notification"]
edition = "2018"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
vendored-tls = ["reqwest/native-tls-vendored"]

[dependencies]
serde = "1"
serde_json = "1"
erased-serde = "0.3"
serde_derive = "1"
reqwest = {version = "0.11.0", features = ["json"], default-features=false}
chrono = "0.4"
log = "0.4"

[dev-dependencies]
argparse = "0.2.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
pretty_env_logger = "0.3"
