[package]
name = "fcm"
version = "0.9.1"
authors = [
  "Suvish Varghese Thoovamalayil <vishy1618@gmail.com>",
  "panicbit <panicbit.dev@gmail.com>",
  "Julius de Bruijn <pimeys@gmail.com>"]
description = "An API to talk to FCM (Firebase Cloud Messaging) in Rust"
license = "MIT"
homepage = "https://github.com/panicbit/fcm-rust"
repository = "https://github.com/panicbit/fcm-rust"
documentation = "https://docs.rs/fcm/"
keywords = ["fcm", "firebase", "notification"]
edition = "2018"

[features]
default = ["rustls"]
rustls = ["awc/rustls"]
openssl = ["awc/openssl"]


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
erased-serde = "0.3"
awc = "3.0.0-beta"
chrono = "0.4"
log = "0.4"

[dev-dependencies]
argparse = "0.2.1"
actix-rt = "2.2.0"
pretty_env_logger = "0.3"
